# pdfshot

./: .gitignore  .markdownlintrc  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: cli.md  footer.md  header.md
pdfshot/: __init__.py  __main__.py  console.py  constants.py
