[tool.poetry]
name = "pdfshot"
version = "0.0.1"
description = "A Python CLI to export pages from PDF files as images."
authors = ["João Palmeiro <joaommpalmeiro@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^1.0", python = "<3.8"}
pdf2image = "^1.14.0"
typer = {extras = ["all"], version = "^0.3.2"}
yaspin = "^1.4.1"

[tool.poetry.dev-dependencies]
typer-cli = "^0.0.11"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdfshot = "pdfshot.console:app"
