[tool.poetry]
name = "pdfshot"
version = "0.2.0"
description = "A Python CLI to export pages from PDF files as images."
authors = ["João Palmeiro <joaommpalmeiro@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/joaopalmeiro/pdfshot"
repository = "https://github.com/joaopalmeiro/pdfshot"
keywords = ["pdfshot", "pdf", "screenshot", "image", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Terminals",
    "Topic :: Utilities"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/joaopalmeiro/pdfshot/issues"
"Twitter" = "https://twitter.com/joaompalmeiro"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^1.0", python = "<3.8"}
pdf2image = "^1.14.0"
typer = {extras = ["all"], version = "^0.3.2"}
yaspin = "^1.4.1"

[tool.poetry.dev-dependencies]
typer-cli = "^0.0.11"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdfshot = "pdfshot.console:app"
